--- a/fe/fe-core/pom.xml
+++ b/fe/fe-core/pom.xml
@@ -1169,6 +1169,17 @@ under the License.
                     </execution>
                 </executions>
             </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <source>11</source>
+                    <target>11</target>
+                    <release>11</release>
+                </configuration>
+            </plugin>
         </plugins>
 
         <pluginManagement>
