[BugFix] fix specify jdk version
Signed-off-by: predator4ann <yunlong.sun@hotmail.com>

--- a/fe/fe-core/pom.xml
+++ b/fe/fe-core/pom.xml
@@ -1175,9 +1175,9 @@ under the License.
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>11</source>
-                    <target>11</target>
-                    <release>11</release>
+                    <source>${maven.compiler.source}</source>
+                    <target>${maven.compiler.target}</target>
+                    <release>${maven.compiler.source}</release>
                 </configuration>
             </plugin>
         </plugins>
